--- a/tb3/appsettings.json
+++ b/tb3/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "EmailHost": "smtp.ethereal.email",
-  "EmailUserName": "kiana.ohara18@ethereal.email",
-  "EmailPassword": "8pJhK5RzzhhZbkxj3w",
+  "EmailHost": "smtp.gmail.com",
+  "EmailUserName": "nareshsagu1@gmail.com",
+  "EmailPassword": "fcim sdda rgff fumb",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
